--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "babel-loader": "^9.1.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.10.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.4",
+    "vm-browserify": "^1.1.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
