--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yase-valuation-tool",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch"
